--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.boot.admin.client.url=http://localhost:8092/
+spring.boot.admin.client.instance.service-base-url=http://localhost:8080/
+spring.boot.admin.client.instance.name=chatone-live
+management.endpoints.web.exposure.include=*
