--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 
 logging.level.root=INFO
-logging.file.name=${user.dir}/logs/plantfinder-api-app.log
+logging.file.name=${user.dir}/logs/chatone-live.log
 
 
-spring.boot.admin.client.url=http://localhost:8092
-spring.boot.admin.client.instance.service-base-url=http://localhost:8080/
+spring.boot.admin.client.url=https://admin-panel-yzl7wengqa-as.a.run.app
+spring.boot.admin.client.instance.service-base-url=https://chatone-live-yzl7wengqa-as.a.run.app
+
 spring.boot.admin.client.instance.name=chatone-live
 management.endpoints.web.exposure.include=*
 
